--- a/substrate/frame/referenda/Cargo.toml
+++ b/substrate/frame/referenda/Cargo.toml
@@ -29,6 +29,7 @@ serde = { features = ["derive"], optional = true, workspace = true, default-feat
 sp-arithmetic = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { workspace = true }
+sp-std = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
@@ -54,6 +55,7 @@ std = [
 	"sp-core/std",
 	"sp-io/std",
 	"sp-runtime/std",
+	"sp-std/std",
 ]
 runtime-benchmarks = [
 	"assert_matches",
