Add inbound queue (#4)
* modify inbound queue to support custom message processing

* passively test tuple trait implementation

* rename XCM to Xcm everywhere

* add comment explaining MessageProcessor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -626,6 +626,10 @@ Inflector = { version = "0.11.4" }
 aes-gcm = { version = "0.10" }
 ahash = { version = "0.8.2" }
 alloy-core = { version = "1.1.0", default-features = false }
+# TODO: remove alloy-primitives and alloy-sol-types, they are re-exported in alloy-core
+# but the version is different so it doesnt compile
+alloy-primitives = { version = "0.4.2", default-features = false }
+alloy-sol-types = { version = "0.4.2", default-features = false }
 always-assert = { version = "0.1" }
 anyhow = { version = "1.0.81", default-features = false }
 approx = { version = "0.5.1" }
