--- a/bridges/snowbridge/primitives/inbound-queue/Cargo.toml
+++ b/bridges/snowbridge/primitives/inbound-queue/Cargo.toml
@@ -15,12 +15,15 @@ workspace = true
 exclude-from-umbrella = true
 
 [dependencies]
+alloy-primitives = { features = ["rlp"], workspace = true }
+alloy-sol-types = { workspace = true }
 alloy-core = { workspace = true, features = ["sol-types"] }
 codec = { workspace = true }
 frame-support.workspace = true
 frame-system.workspace = true
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
+impl-trait-for-tuples = { workspace = true }
 snowbridge-beacon-primitives.workspace = true
 snowbridge-core.workspace = true
 snowbridge-verification-primitives.workspace = true
