--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -87,7 +87,8 @@ bp-bridge-hub-rococo.workspace = true
 bp-bridge-hub-westend.workspace = true
 
 [dev-dependencies]
-asset-test-utils = { default-features = true, path = "../test-utils" }
+asset-test-utils = { workspace = true, default-features = true }
+parachains-runtimes-test-utils = { workspace = true, default-features = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
