--- a/cumulus/parachains/runtimes/people/people-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/people/people-rococo/Cargo.toml
@@ -69,6 +69,9 @@ parachain-info.workspace = true
 parachains-common.workspace = true
 testnet-parachains-constants = { features = ["rococo"], workspace = true }
 
+[dev-dependencies]
+parachains-runtimes-test-utils = { workspace = true, default-features = true }
+
 [features]
 default = ["std"]
 std = [
