--- a/polkadot/node/subsystem-bench/Cargo.toml
+++ b/polkadot/node/subsystem-bench/Cargo.toml
@@ -98,6 +98,7 @@ strum = { features = ["derive"], workspace = true, default-features = true }
 
 parking_lot = { workspace = true, default-features = true }
 polkadot-network-bridge = { workspace = true, default-features = true }
+sc-network-common = { workspace = true, default-features = true }
 
 [features]
 default = []
