--- a/.github/workflows/release-build-rc.yml
+++ b/.github/workflows/release-build-rc.yml
@@ -136,7 +136,7 @@ jobs:
     uses: "./.github/workflows/release-reusable-rc-buid.yml"
     with:
       binary: '["chain-spec-builder"]'
-      package: "staging-chain-spec-builder"
+      package: staging-chain-spec-builder
       release_tag: ${{ needs.validate-inputs.outputs.release_tag }}
       target: x86_64-unknown-linux-gnu
     secrets:
@@ -180,7 +180,7 @@ jobs:
     uses: "./.github/workflows/release-reusable-rc-buid.yml"
     with:
       binary: '["polkadot-parachain"]'
-      package: "polkadot-parachain-bin"
+      package: polkadot-parachain-bin
       release_tag: ${{ needs.validate-inputs.outputs.release_tag }}
       target: aarch64-apple-darwin
     secrets:
@@ -202,7 +202,7 @@ jobs:
     uses: "./.github/workflows/release-reusable-rc-buid.yml"
     with:
       binary: '["polkadot-omni-node"]'
-      package: "polkadot-omni-node"
+      package: polkadot-omni-node
       release_tag: ${{ needs.validate-inputs.outputs.release_tag }}
       target: aarch64-apple-darwin
     secrets:
@@ -224,7 +224,7 @@ jobs:
     uses: "./.github/workflows/release-reusable-rc-buid.yml"
     with:
       binary: '["frame-omni-bencher"]'
-      package: "frame-omni-bencher"
+      package: frame-omni-bencher
       release_tag: ${{ needs.validate-inputs.outputs.release_tag }}
       target: aarch64-apple-darwin
     secrets:
@@ -246,7 +246,7 @@ jobs:
     uses: "./.github/workflows/release-reusable-rc-buid.yml"
     with:
       binary: '["chain-spec-builder"]'
-      package: "staging-chain-spec-builder"
+      package: staging-chain-spec-builder
       release_tag: ${{ needs.validate-inputs.outputs.release_tag }}
       target: aarch64-apple-darwin
     secrets:
