--- a/polkadot/node/network/availability-recovery/Cargo.toml
+++ b/polkadot/node/network/availability-recovery/Cargo.toml
@@ -17,6 +17,7 @@ rand = { workspace = true, default-features = true }
 fatality = { workspace = true }
 thiserror = { workspace = true }
 async-trait = { workspace = true }
+sp-tracing = { workspace = true, default-features = true }
 gum = { workspace = true, default-features = true }
 
 polkadot-erasure-coding = { workspace = true, default-features = true }
