--- a/polkadot/node/network/gossip-support/Cargo.toml
+++ b/polkadot/node/network/gossip-support/Cargo.toml
@@ -14,6 +14,7 @@ sp-application-crypto = { workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
 sp-crypto-hashing = { workspace = true, default-features = true }
+sp-tracing = { workspace = true, default-features = true }
 sc-network = { workspace = true, default-features = true }
 sc-network-common = { workspace = true, default-features = true }
 
@@ -26,7 +27,6 @@ futures = { workspace = true }
 futures-timer = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
-gum = { workspace = true, default-features = true }
 
 [dev-dependencies]
 sp-keyring = { workspace = true, default-features = true }
