--- a/polkadot/node/subsystem-util/Cargo.toml
+++ b/polkadot/node/subsystem-util/Cargo.toml
@@ -20,7 +20,6 @@ pin-project = { workspace = true }
 rand = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 fatality = { workspace = true }
-gum = { workspace = true, default-features = true }
 derive_more = { workspace = true, default-features = true }
 schnellru = { workspace = true }
 
@@ -37,6 +36,7 @@ metered = { features = ["futures_channel"], workspace = true }
 sp-core = { workspace = true, default-features = true }
 sp-application-crypto = { workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
+sp-tracing = { workspace = true, default-features = true }
 sc-client-api = { workspace = true, default-features = true }
 
 kvdb = { workspace = true }
