--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -246,7 +246,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        binary: [ polkadot, polkadot-parachain, polkadot-omni-node, frame-omni-bencher, chain-spec-builder ]
+        binary: [ polkadot, polkadot-execute-worker, polkadot-prepare-worker, polkadot-parachain, polkadot-omni-node, frame-omni-bencher, chain-spec-builder ]
         target: [ x86_64-unknown-linux-gnu, aarch64-apple-darwin ]
 
     steps:
