--- a/.github/workflows/tests-linux-stable.yml
+++ b/.github/workflows/tests-linux-stable.yml
@@ -100,7 +100,7 @@ jobs:
         run: |
           # Fixes "detected dubious ownership" error in the ci
           git config --global --add safe.directory '*'
-          cargo nextest run \
+          forklift cargo nextest run \
             --workspace \
             --locked \
             --release \
@@ -111,7 +111,7 @@ jobs:
       # run runtime-api tests with `enable-staging-api` feature on the 1st node
       - name: runtime-api tests
         if: ${{ matrix.partition == '1/3' }}
-        run: cargo nextest run -p sp-api-test --features enable-staging-api --cargo-quiet
+        run: forklift cargo nextest run -p sp-api-test --features enable-staging-api --cargo-quiet
       - name: Stop all workflows if failed
         if: ${{ failure() && steps.required.conclusion == 'failure' && !github.event.pull_request.head.repo.fork }}
         uses: ./.github/actions/workflow-stopper
@@ -146,7 +146,7 @@ jobs:
       - name: script
         id: required
         run: |
-          cargo nextest run --workspace \
+          forklift cargo nextest run --workspace \
                    --locked \
                    --release \
                    --no-fail-fast \
