--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -1,14 +1,14 @@
 name: Release - Publish draft
 
-# This workflow runs in paritytech-release
+# This workflow runs in paritytech-release and creates full release draft with:
+# - release notes
+# - info about the runtimes
+# - attached artifacts:
+#   - runtimes
+#   - binaries
+#   - signatures
 
 on:
-  # push:
-    # tags:
-      # Catches v1.2.3 and v1.2.3-rc1
-      # - v[0-9]+.[0-9]+.[0-9]+*
-      # - polkadot-stable[0-9]+* Activate when the release process from release org is setteled
-
   workflow_dispatch:
     inputs:
       release_tag:
@@ -61,35 +61,6 @@ jobs:
       id-token: write
       attestations: write
       contents: read
-
-
-  # TODO: replace this job with fetch-binaries-from-s3 and move this job to  .github/workflows/release-build-rc.yml
-  # build-binaries:
-  #   needs: [ validate-inputs ]
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       # Tuples of [package, binary-name]
-  #       binary: [ [frame-omni-bencher, frame-omni-bencher], [staging-chain-spec-builder, chain-spec-builder] ]
-  #   steps:
-  #     - name: Checkout sources
-  #       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-  #     - name: Install protobuf-compiler
-  #       run: |
-  #         sudo apt update
-  #         sudo apt install -y protobuf-compiler
-
-  #     - name: Build ${{ matrix.binary[1] }} binary
-  #       run: |
-  #         cargo build --locked --profile=production -p ${{ matrix.binary[0] }} --bin ${{ matrix.binary[1] }}
-  #         target/production/${{ matrix.binary[1] }} --version
-
-  #     - name: Upload ${{ matrix.binary[1] }} binary
-  #       uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
-  #       with:
-  #         name: ${{ matrix.binary[1] }}
-  #         path: target/production/${{ matrix.binary[1] }}
 
   publish-release-draft:
     runs-on: ubuntu-latest
@@ -208,36 +179,6 @@ jobs:
           gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
             --repo paritytech/polkadot-sdk \
             '${{ env.ASSET }}#${{ matrix.chain }}_runtime-v${{ env.SPEC }}.compact.compressed.wasm'
-
-  # publish-binaries:
-  #   needs: [ validate-inputs, publish-release-draft, build-binaries ]
-  #   environment: release
-  #   continue-on-error: true
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       binary: [frame-omni-bencher, chain-spec-builder]
-
-  #   steps:
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-  #       with:
-  #         name: ${{ matrix.binary }}
-
-  #     - name: Generate content write token for the release automation
-  #       id: generate_write_token
-  #       uses: actions/create-github-app-token@v1
-  #       with:
-  #           app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
-  #           private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
-  #           owner: paritytech
-  #           repositories: polkadot-sdk
-
-  #     - name: Upload ${{ matrix.binary }} binary
-  #       env:
-  #         GITHUB_TOKEN: ${{ steps.generate_write_token.outputs.token }}
-  #       run: |
-  #           gh release upload ${{ needs.validate-inputs.outputs.release_tag }} --repo paritytech/polkadot-sdk ${{ matrix.binary }}
 
   publish-release-artifacts:
     needs: [ validate-inputs, publish-release-draft ]
