--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -364,6 +364,7 @@ runtime-benchmarks = [
 	"staging-xcm-builder?/runtime-benchmarks",
 	"staging-xcm-executor?/runtime-benchmarks",
 	"xcm-runtime-apis?/runtime-benchmarks",
+	"staging-xcm?/runtime-benchmarks"
 ]
 try-runtime = [
 	"cumulus-pallet-aura-ext?/try-runtime",
