--- a/substrate/frame/election-provider-multi-block/Cargo.toml
+++ b/substrate/frame/election-provider-multi-block/Cargo.toml
@@ -36,6 +36,7 @@ sp-npos-elections = { default-features = false, path = "../../primitives/npos-el
 [dev-dependencies]
 sp-tracing = { path = "../../primitives/tracing" }
 pallet-balances = { path = "../balances", default-features = false }
+substrate-test-utils = { workspace = true }
 parking_lot = "0.12.1"
 
 [features]
@@ -62,7 +63,6 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
-
 try-runtime = [
 	"frame-election-provider-support/try-runtime",
 	"frame-support/try-runtime",
