--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -3,8 +3,6 @@ name = "polkadot-sdk"
 version = "0.1.0"
 description = "Polkadot SDK umbrella crate."
 license = "Apache-2.0"
-homepage.workspace = true
-repository.workspace = true
 
 [features]
 default = ["std"]
@@ -617,6 +615,12 @@ tuples-96 = [
 workspace = true
 
 [package.authors]
+workspace = true
+
+[package.homepage]
+workspace = true
+
+[package.repository]
 workspace = true
 
 [dependencies.assets-common]
