--- a/substrate/frame/revive/fixtures/Cargo.toml
+++ b/substrate/frame/revive/fixtures/Cargo.toml
@@ -6,6 +6,9 @@ edition.workspace = true
 license.workspace = true
 description = "Fixtures for testing and benchmarking"
 
+[package.metadata.polkadot-sdk]
+exclude-from-umbrella = true
+
 [lints]
 workspace = true
 
