--- a/.github/workflows/bench-update-weights.yml
+++ b/.github/workflows/bench-update-weights.yml
@@ -63,7 +63,7 @@ jobs:
           python3 -m pip install -r .github/scripts/generate-prdoc.requirements.txt
           python3 .github/scripts/cmd/cmd.py bench --help # --runtime ${{ matrix.runtime.name }}
           # append test to README.md
-          echo "${{ matrix.runtime.name }}|" >> README.md
+          echo "${{ matrix.runtime.name }}|" >> README-${{matrix.runtime.name}}.md
           git status
           git diff
 
