--- a/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
@@ -44,6 +44,7 @@ rococo-westend-system-emulated-network = { workspace = true }
 testnet-parachains-constants = { features = ["rococo", "westend"], workspace = true, default-features = true }
 asset-hub-westend-runtime = { workspace = true }
 bridge-hub-westend-runtime = { workspace = true }
+penpal-emulated-chain = { workspace = true }
 
 # Snowbridge
 snowbridge-core = { workspace = true }
